# RGBD-Tracking

./: .gitignore  CMakeLists.txt  Dataloader.py  README.md  demo.py  dt.code-workspace  globalsave.pkl  kmeans_clustering.py  package.xml  playground2.ipynb  tracking.ipynb  trackingTest.py
src/: .depth_test_node.py.kate-swp  BoundingBoxMessage.py  BoxKalmanFilter.py  DepthTracker.py  Helpers.py  ParticleFilter.py  Vision.py  bounding_box_node.py  depth_test_node.py  exploration.py  particle_filter.py  sort.py  state_publisher.py
src/files_node/: bbox.pkl
test/: 2center.pkl  back.pkl  center.pkl  front.pkl  left.pkl
