<?xml version="1.0"?>
<package format="2">
  <name>DepthTracker</name>
  <version>0.0.0</version>
  <description>The wall_follow package</description>
  <maintainer email="dhruvkar@seas.upenn.edu">Dhruv Karthik</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
